--- a/css/docs.css
+++ b/css/docs.css
@@ -130,10 +130,12 @@ html, body{
   height:auto;
 }
 body{
+    color: rgb(100, 207, 255);
       -webkit-box-shadow: inset 0 0 40px 20px rgba(0,0,0,0.3);
     box-shadow: inset 0 0 100px 6px rgba(0,0,0,0.4);
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);
 }
+
 
 .tray-wrapper {
   min-height: 800px !important;
