--- a/css/docs.css
+++ b/css/docs.css
@@ -106,6 +106,6 @@ body{
     border: 1px solid rgb(255, 233, 120)!important;
     color: rgb(255, 233, 120);
 }
-.text-coor-alt{
+.text-color-alt{
     color: rgb(255, 233, 120);
 }
