--- a/css/docs.css
+++ b/css/docs.css
@@ -106,6 +106,9 @@ body{
     border: 1px solid rgb(255, 233, 120)!important;
     color: rgb(255, 233, 120);
 }
-.text-color-alt{
+.text-color-alt,
+a.text-color-alt:hover,
+a.text-color-alt:focus,
+{
     color: rgb(255, 233, 120);
 }
