--- a/css/docs.css
+++ b/css/docs.css
@@ -2,9 +2,9 @@
 padding-bottom:100px;
 }
 pre {
-    background-color: rgba(255,255,255,0.2);
-    color: rgb(100, 207, 255);
-    border-color: rgb(100, 207, 255);
+    color: rgb(255, 233, 120);
+    border-color: rgb(186, 234, 255);
+    background-color: rgba(186, 234, 255, 0.15);
     text-align: left;
     white-space: pre-line;
 }
