--- a/_sass/AppFlow.scss
+++ b/_sass/AppFlow.scss
@@ -106,7 +106,11 @@
 
 .app-tray,
 .app-tray:before,
-.app-tray > .app {
+.app-tray > .app,
+.app-tray > .app > [class^="app-alert"],
+.app-tray > .app > .app-header,
+.app-tray > .app > .app-content,
+.app-tray > .app > .app-title{
   -webkit-transition: 400ms;
   -moz-transition: 400ms;
   -o-transition: 400ms;
@@ -128,6 +132,43 @@
   display: none;
 }
 
+.app-tray:not(.app-open) > .app:not(.active) > [class^="app-alert"]{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+}
+.app-tray.app-open > .app.active > [class^="app-alert"]{
+    display: none;
+}
+.app-alert,
+.app-alert-tr{
+    right: -5px;
+    top: -5px;
+    >*:first-child{
+        float: right;
+    }
+}
+.app-alert-tl{
+    left: -5px;
+    top: -5px;
+    >*:first-child{
+        float: left;
+    }
+}
+.app-alert-bl{
+    left: -5px;
+    bottom: -5px;
+    >*:first-child{
+        float: left;
+    }
+}
+.app-alert-br{
+    right: -5px;
+    bottom: -5px;
+    >*:first-child{
+        float: right;
+    }
+}
 
 $app-span-list: 2 3 4 5;
 $app-spacing-list: 10, 15, 20, 25, 30;
