--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -108,7 +108,11 @@
 
 .app-tray,
 .app-tray:before,
-.app-tray > .app {
+.app-tray > .app,
+.app-tray > .app > [class^="app-alert"],
+.app-tray > .app > .app-header,
+.app-tray > .app > .app-content,
+.app-tray > .app > .app-title {
   -webkit-transition: 400ms;
   -moz-transition: 400ms;
   -o-transition: 400ms;
@@ -127,6 +131,54 @@
 
 .app-tray.app-open > .app:not(.active) {
   display: none;
+}
+
+.app-tray:not(.app-open) > .app:not(.active) > [class^="app-alert"] {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.app-tray.app-open > .app.active > [class^="app-alert"] {
+  display: none;
+}
+
+.app-alert,
+.app-alert-tr {
+  right: -5px;
+  top: -5px;
+}
+
+.app-alert > *:first-child,
+.app-alert-tr > *:first-child {
+  float: right;
+}
+
+.app-alert-tl {
+  left: -5px;
+  top: -5px;
+}
+
+.app-alert-tl > *:first-child {
+  float: left;
+}
+
+.app-alert-bl {
+  left: -5px;
+  bottom: -5px;
+}
+
+.app-alert-bl > *:first-child {
+  float: left;
+}
+
+.app-alert-br {
+  right: -5px;
+  bottom: -5px;
+}
+
+.app-alert-br > *:first-child {
+  float: right;
 }
 
 .app-tray.app-open[class*="app-open-"] {
