--- a/css/styles.css
+++ b/css/styles.css
@@ -50,50 +50,37 @@
   }
 }
 
-.app-tray:not(.app-open) > .app:not(.active) > [class^="app-alert"] {
+.slide-in {
+  z-index: 10; /* to position it in front of the other content */
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
+  overflow: hidden; /* to prevent scrollbar appearing */
 }
 
-.app-tray.app-open > .app.active > [class^="app-alert"] {
-  display: none;
+.slide-in.from-left {
+  left: 0;
 }
 
-.app-alert,
-.app-alert-tr {
-  right: -5px;
-  top: -5px;
+.slide-in.from-right {
+  right: 0;
 }
 
-.app-alert > *:first-child,
-.app-alert-tr > *:first-child {
-  float: right;
+.slide-in-content {
+  padding: 5px 20px;
+  background: #eee;
+  transition: all .5s ease; /* our nice transition */
 }
 
-.app-alert-tl {
-  left: -5px;
-  top: -5px;
+.slide-in.from-left .slide-in-content {
+  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
 }
 
-.app-alert-tl > *:first-child {
-  float: left;
+.slide-in.from-right .slide-in-content {
+  transform: translateX(100%);
+  -webkit-transform: translateX(100%);
 }
 
-.app-alert-bl {
-  left: -5px;
-  bottom: -5px;
-}
-
-.app-alert-bl > *:first-child {
-  float: left;
-}
-
-.app-alert-br {
-  right: -5px;
-  bottom: -5px;
-}
-
-.app-alert-br > *:first-child {
-  float: right;
+.slide-in.show .slide-in-content {
+  transform: translateX(0);
+  -webkit-transform: translateX(0);
 }
