--- a/css/styles.css
+++ b/css/styles.css
@@ -50,37 +50,72 @@
   }
 }
 
-.slide-in {
-  z-index: 10; /* to position it in front of the other content */
+.loader {
+  position: relative;
+  margin: 0 auto;
+  width: 100px;
+}
+
+.loader:before {
+  content: '';
+  display: block;
+  padding-top: 100%;
+}
+
+.circular {
+  animation: rotate 2s linear infinite;
+  height: 100%;
+  transform-origin: center center;
+  width: 100%;
   position: absolute;
-  overflow: hidden; /* to prevent scrollbar appearing */
-}
-
-.slide-in.from-left {
+  top: 0;
+  bottom: 0;
   left: 0;
-}
-
-.slide-in.from-right {
   right: 0;
+  margin: auto;
 }
 
-.slide-in-content {
-  padding: 5px 20px;
-  background: #eee;
-  transition: all .5s ease; /* our nice transition */
+.path {
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+  stroke-linecap: round;
 }
 
-.slide-in.from-left .slide-in-content {
-  transform: translateX(-100%);
-  -webkit-transform: translateX(-100%);
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.slide-in.from-right .slide-in-content {
-  transform: translateX(100%);
-  -webkit-transform: translateX(100%);
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -35px;
+  }
+  100% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -124px;
+  }
 }
 
-.slide-in.show .slide-in-content {
-  transform: translateX(0);
-  -webkit-transform: translateX(0);
+@keyframes color {
+  100%,
+  0% {
+    stroke: #d62d20;
+  }
+  40% {
+    stroke: #0057e7;
+  }
+  66% {
+    stroke: #008744;
+  }
+  80%,
+  90% {
+    stroke: #ffa700;
+  }
 }
