--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,10 @@
 	animation: Gradient 15s ease infinite;
 }
 .color-animated {
-	color: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	color:transparent;
+    	-webkit-background-clip: text;
+    	background-clip: text;
 	background-size: 400% 400%;
 	-webkit-animation: Gradient 15s ease infinite;
 	-moz-animation: Gradient 15s ease infinite;
