--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,16 @@
 	-moz-animation: Gradient 15s ease infinite;
 	animation: Gradient 15s ease infinite;
 }
+.color-animated.fa-spin {
+   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+   color:transparent;
+      -webkit-background-clip: text;
+      background-clip: text;
+   background-size: 400% 400%;
+   -webkit-animation: Gradient 15s ease infinite, fa-spin 2s infinite linear;
+   -moz-animation: Gradient 15s ease infinite, fa-spin 2s infinite linear;
+   animation: Gradient 15s ease infinite, fa-spin 2s infinite linear;
+}
 
 @-webkit-keyframes Gradient {
 	0% {
