--- a/css/styles.css
+++ b/css/styles.css
@@ -162,4 +162,19 @@
     transform:translateX(25%);
   }
 }
+.h-100{
+height:100px;
+}
+.h-200{
+height:200px;
+}
+.h-100{
+height:300px;
+}
+.h-400{
+height:400px;
+}
+.h-500{
+height:500px;
+}
 
