--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,7 @@ height:500px;
   right: 0;
   bottom: 0;
   left: 0;
+  margin:5px
 }
 .hours {
   background: #000;
@@ -219,7 +220,7 @@ height:500px;
   position: absolute;
   top: 30%;
   transform-origin: 50% 100%;
-  width: 2.5%;
+  width: 4%;
 }
 .minutes {
   background: #000;
@@ -228,16 +229,16 @@ height:500px;
   position: absolute;
   top: 10%;
   transform-origin: 50% 100%;
-  width: 2%;
+  width: 3%;
 }
 .seconds {
-  background: #000;
+  background: #ffc107;
   height: 45%;
   left: 49.5%;
   position: absolute;
   top: 14%;
   transform-origin: 50% 80%;
-  width: 1%;
+  width: 2%;
   z-index: 8;
 }
 @keyframes rotate {
